--- a/player/src/index.html
+++ b/player/src/index.html
@@ -200,8 +200,8 @@
             "tz": 0
         };
 
-        const film = initFilm("film", filmData);
-        const film2 = initFilm("film", film2Data);
+        const film = initFilm("#film", filmData);
+        const film2 = initFilm("#film2", film2Data);
 
         film.play();
         film.nav(36);
