viewbox ready, playerSurface

--- a/player/src/index.html
+++ b/player/src/index.html
@@ -4,7 +4,9 @@
 </head>
 <body>
 <div id="film"/>
-<script>
+<script type="text/javascript">
+    console.log(vm);
 </script>
+<script type="text/javascript" src="main.bundle.js"></script>
 </body>
 </html>
