retards de conf

--- a/src/main/index.html
+++ b/src/main/index.html
@@ -16,6 +16,11 @@
     <script async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
 <body/>
-<div id="app"/>
+<span>
+    <svg viewbox="-50 -50 100 100">
+        <circle cx="0" cy="0" r="40" stroke="black" stroke-width="3" fill="red" />
+    </svg>
+    <div id="app"/>
+</span>
 </body>
 </html>
