--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,15 @@
 <html lang="fr">
 <head profile="http://www.w3.org/2005/10/profile">
     <meta charset="utf-8"/>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
+    <link rel="manifest" href="/img/site.webmanifest">
+    <link rel="mask-icon" href="/img/safari-pinned-tab.svg" color="#1155cc">
+    <meta name="msapplication-TileColor" content="#2d89ef">
+    <meta name="theme-color" content="#1155cc">
+
     <meta http-equiv="cache-control" content="max-age=0"/>
     <meta http-equiv="cache-control" content="no-cache"/>
     <meta http-equiv="expires" content="0"/>
@@ -9,15 +18,17 @@
     <meta http-equiv="pragma" content="no-cache"/>
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
-    <link href="https://unpkg.com/vuetify/dist/vuetify.min.css" rel="stylesheet">
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <link href="https://unpkg.com/vuetify@<%= htmlWebpackPlugin.options.versionVuetify%>/dist/vuetify<%= htmlWebpackPlugin.options.min%>.css" rel="stylesheet">
+    <%= htmlWebpackPlugin.options.scriptVue %>
+    <%= htmlWebpackPlugin.options.scriptVuetify %>
 </head>
-<body/>
+<body>
 <span>
-    <div id="app"/>
-</span>
+        <div id="app"/>
+    </span>
 </body>
 </html>
