--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head profile="http://www.w3.org/2005/10/profile">
+
+    <title>Draw</title>
+    <meta name="Description" content="Dessins animés">
+
     <meta charset="utf-8"/>
 
     <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
